manifest/prod/aqm-prod-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aqm-prod-gateway
  namespace: aqm-site-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "preview.aquametrics.net"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: aqm-prod-hydrate-net-tls
      hosts:
        - "preview.aquametrics.net"
